[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devtkit"
dynamic = ["version"]
description = "An open-source DEV Community toolkit written in Python that lets users export information gathered from the DEV.to API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
	{name = "tyleruploads"}
]
keywords = ["python", "markdown", "pagination", "cli", "open-source", "security", "json", "utility", "automation", "csv", "rest-api", "scripting", "python-script", "rate-limiting", "developer-tools", "data-export", "api-integration", "devto", "dev-to", "forem"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]
dependencies = [
	"requests>=2.31.0"
]

[project.scripts]
devtkit = "devtkit.main:main"

[tool.hatch.version]
path = "src/main.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "devtkit"
